gcc/testsuite/rust/rustc/ui/parser/better-expected.rs
fn main() {
    let x: [isize 3]; // { dg-error "" "" { target *-*-* } }
}

